# pi-graph

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PRODUCT.md  README.md  SECURITY.md  SKILL.md  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
actions/: batch-readiness.yaml  canonicalize-jsonl.yaml  classify-work.yaml  evidence-synthesis.yaml  exact-item-pipeline.yaml  extract-action-items.yaml  failure-triage.yaml  handoff-contract.yaml  judge-and-refine.yaml  parallel-review.yaml  red-team-repair.yaml  repo-change.yaml
agents/: openai.yaml
docs/: actions.md  audit-contract.md  example-certification.md  integration-contract.md  node-system.md  workflow-format.md
docs/research/workflow-builders-2026-07/: brief.md  evidence.jsonl  report.md
examples/: README.md  catalog.json
examples/workflows/01-hello-command/: steps.yaml
examples/workflows/02-sequential-pipeline/: input.txt  steps.yaml
examples/workflows/03-parallel-fanout/: input.txt  (+1 more)
extensions/: pi-graph.test.mjs  pi-graph.ts  pi-workflows.test.mjs  pi-workflows.ts
references/: pi-capability-map.md  product-planning-harness.md
schemas/: workflow.schema.json
scripts/: check.sh  control.py  graph.py  piw.py  run_batch.py  run_example_suite.py  run_steps.py  serve_workflow.py
templates/: idea-to-plan.steps.yaml
templates/product-planning/: run.py
tests/: test_batch.py  test_cli.py  test_examples.py  test_product_cli.py  test_runner_contracts.py  test_workflow_ui.py
ui/: index.html
(+24 files in other folders)
